Hospital Management System/force-app/main/default/objects/Prescription__c/Prescription__c.object-meta.xml
<CustomObject>
    <description>Parent prescription to which this medication belongs.</description>
    <label>Prescription</label>
    <nameField>
        <displayFormat>PREC-{0000}</displayFormat>
        <label>Prescription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>