Hospital Management System/force-app/main/default/objects/Prescription__c/fields/Consultation__c.field-meta.xml
<CustomField>
    <fullName>Consultation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consultation during which this prescription was created.</description>
    <label>Consultation</label>
    <referenceTo>Consultation__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>