Hospital Management System/force-app/main/default/objects/Prescription__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional instructions or notes related to the prescription.</description>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>