Hospital Management System/force-app/main/default/objects/Prescription__c/fields/Prescription_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Prescription_External_ID__c</fullName>
    <description>Optional external identifier for prescription records
        from integrated systems.</description>
    <externalId>true</externalId>
    <label>Prescription External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>