Hospital Management System/force-app/main/default/objects/Prescription__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total amount of medicaitons</description>
    <label>Total Amount</label>
    <summarizedField>Medication__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Medication__c.Prescription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>