Hospital Management System/force-app/main/default/objects/Prescription__c/fields/Total_Medication_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Medication_Amount__c</fullName>
    <description>Aggregated total of all medication line items
        associated with this prescription.</description>
    <label>Total Medication Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>